updating index and styles.css

--- a/index.html
+++ b/index.html
@@ -22,29 +22,76 @@
     <!--end of logo-->
   </div>
   <!--end of navbr-top-->
+
+  <div class="col-md-3 subcont-left">
+    <p>Happy Hour<br>
+      <hr>Party Time</p>
+  </div>
+  <!--end of subcont-left-->
+  <div class="breakfast col-md-3">
+
+    <p>Breakfast</p><br>
+  </div>
+  <!--end of breakfast-->
+  <div class="lunch col-md-3">
+    <p>Lunch</p><br>
+  </div>
+  <!--end of lunch-->
+  <div class="dinner col-md-3">
+    <p>Dinner</p><br>
+  </div>
+  <!--end of dinner-->
+
   <div class="jumbotron">
-    <div class="row">
-      <div class="col-md-3 subcont-left">
-        <p>Happy Hour<br>
-          <hr>Party Time</p>
+    <div class="container">
+      <div class="row1">
+
+        <div class="col-md-6">
+          <img src="img/fastfood1.jpg" alt="fastfood"><br>
+          <img src="img/fastfood2.jpg" alt="fastfood2">
+        </div>
+
+
+        <div class="col-md-6 foods">
+          <h1>Fast Foods</h1>
+          <p>You'ill Love our delicious food</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet tellus rutrum augue mattis tempor. Vivamus nec tortor maximus, sodales metus sed, molestie dui. Quisque molestie eu mi sit amet posuere. Nunc placerat ante nibh, eleifend aliquet
+            dolor pellentesque eget. Aliquam egestas dictum tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. In porta metus sit amet viverra laoreet. Praesent augue augue, egestas id vestibulum ut, euismod vitae felis.
+          </p>
+          <button type="button" class="btn btn-danger">View Gallery-></button>
+        </div>
       </div>
-      <div class="breakfast col-md-3">
-        <p>Breakfast</p><br>
+      <!--end of row1-->
+      <div class="row2">
+
+        <div class="col-md-6 drinks">
+          <h2>Drinks</h2>
+          <p>We also produce delicious drinks</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet tellus rutrum augue mattis tempor. Vivamus nec tortor maximus, sodales metus sed, molestie dui. Quisque molestie eu mi sit amet posuere. Nunc placerat ante nibh, eleifend aliquet
+            dolor pellentesque eget. Aliquam egestas dictum tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. In porta metus sit amet viverra laoreet. Praesent augue augue, egestas id vestibulum ut, euismod vitae felis.
+          </p>
+          <button type="button" class="btn btn-danger">View Gallery-></button>
+        </div>
+        <!--end of drinks-->
+        <div class="col-md-6">
+          <img src="img/drink1.jpg" alt="drink"><img src="img/drink2.jpg" alt="drink2">
+        </div>
+        <!--end of drink images-->
       </div>
-      <!--end of breakfast-->
-      <div class="lunch col-md-3">
-        <p>Lunch</p><br>
-      </div>
-      <!--end of lunch-->
-      <div class="dinner col-md-3">
-        <p>Dinner</p><br>
-      </div>
-      <!--end of subcont-left-->
-      <!--end of dinner-->
+      <!--end of row2-->
     </div>
-    <!--end of row-->
+    <!--end of container-->
   </div>
   <!--end of jumbotron-->
+
+  <div class="jumbotron">1
+    <div class="container">
+    </div>
+
+
+  </div>
+
+
 
 </body>
 
