--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/bootstrap.css" rel="stylesheet" media="all" type="text/css">
+  <link href="css/bootstrap.min.css" rel="stylesheet" media="all">
   <link href="css/styles.css" rel="stylesheet" media="all">
   <script src="js/jquery-3.1.1.js"></script>
   <script src="js/scripts.js"></script>
@@ -52,7 +52,7 @@
         </div>
 
 
-        <div class="col-md-6 foods">
+        <div class="col-md-6">
           <h1>Fast Foods</h1>
           <p>You'ill Love our delicious food</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet tellus rutrum augue mattis tempor. Vivamus nec tortor maximus, sodales metus sed, molestie dui. Quisque molestie eu mi sit amet posuere. Nunc placerat ante nibh, eleifend aliquet
@@ -64,7 +64,7 @@
       <!--end of row1-->
       <div class="row2">
 
-        <div class="col-md-6 drinks">
+        <div class="col-md-6">
           <h2>Drinks</h2>
           <p>We also produce delicious drinks</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet tellus rutrum augue mattis tempor. Vivamus nec tortor maximus, sodales metus sed, molestie dui. Quisque molestie eu mi sit amet posuere. Nunc placerat ante nibh, eleifend aliquet
@@ -83,16 +83,96 @@
     <!--end of container-->
   </div>
   <!--end of jumbotron-->
+  <div class="jumbotron1">
 
-  <div class="jumbotron">1
     <div class="container">
-    </div>
 
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="#">Fast Foods</a></li>
+        <li role="presentation"><a href="#">Drinks</a></li>
+        <li role="presentation"><a href="#">Chicken</a></li>
+        <li role="presentation"><a href="#">Rice</a></li>
+
+      </ul>
+      <nav aria-label="page navigation">
+        <ul class="pagination">
+          <li>
+            <a href="#" aria-label="previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+
+          <li>
+            <a href="#"><img src="img/chickenBurger.jpg" class="img-responsive" alt="chickenBurger">Chicken Burger</a>
+          </li>
+          <li>
+            <a href="#"><img src="img/beefBurger.jpg" class="img-responsive" alt="chickenburger">Beef Burger</a>
+          </li>
+          <li>
+            <a href="#"><img src="img/chickenPizza.jpg" class="img-responsive" alt="chickenpizza">Chicken Pizza</a>
+          </li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+          </li>
+        </ul>
+      </nav>
+      <!--end of nav-->
+
+    </div>
+    <!--end of container for jumbotron1-->
 
   </div>
+  <!--end of jumbotron1-->
 
 
+  <div class="jumbotron2">
+    <div class="container">
+      <div class="row2">
 
+        <div class="col-md-8">
+          <h3><strong>Our happy customers</strong></h3><br>
+          <h4>George Richard</h4>
+          <p>Great food!Menu is awesome,their food are not only great but<br> also in the right price. I'll highly recommend them:)
+            <nav aria-label="Page navigation">
+              <ul class="pagination">
+                <li>
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"><img src="img/p1.png" class="img-responsive" alt="customer"></a>
+                </li>
+                <li>
+                  <a href="#"><img src="img/p2.png" class="img-responsive" alt="customer"></a>
+                </li>
+                <li>
+                  <a href="#"><img src="img/p3.png" class="img-responsive" alt="customer"></a>
+                </li>
+                <a href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+                </li>
+              </ul>
+              <!--end of class pagination-->
+            </nav>
+            <!--end of nav-->
+            </span>
+        </div>
+
+        <div class="col-md-4">
+          <h3><strong>About menu</strong></h3>
+          <p>We are menu a little team of 7 members.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+            <br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <!--end of row2-->
+    </div>
+    <!--end of container-->
+  </div>
+  <!--end of jumbotron2-->
 </body>
 
 </html>
