adding social media images and modifications to jumbotron3 and jumbotron4

--- a/index.html
+++ b/index.html
@@ -173,6 +173,39 @@
     <!--end of container-->
   </div>
   <!--end of jumbotron2-->
+  <div class="jumbotron3">
+    <div class="container">
+      <h3 style="text-align:center"> Get our daily food items delivered into your email</h3>
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="exampleInputEmail2">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Your email">
+          <button type="submit" class="btn btn-danger">Subscribe</button>
+        </div>
+      </form>
+      <!--end of form-->
+    </div>
+    <!--end of container in jumbotron3-->
+  </div>
+  <!--end of jumbotron3-->
+  <div class="jumbotron4">
+    <div class="container">
+      <div class="small-logo">
+        <img src="img/logo_white.png" alt="small-logo">
+      </div>
+      <div class="text" <p style="text-align:center">MENU<br>That's What We Are</p>
+      </div>
+      <div class="social-media">
+        <img src="img/facebook.png" alt="facebook">
+        <img src="img/twitter.png" alt="twitter">
+        <img src="img/pinterest.png" alt="pinterest">
+      </div>
+      <p style="text-align:center">2016 Menu Restaurant</p>
+    </div>
+    <!--end of jumbotron4 container-->
+
+  </div>
+
 </body>
 
 </html>
