--- a/index.html
+++ b/index.html
@@ -7,22 +7,43 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="all">
   <link href="css/styles.css" rel="stylesheet" media="all">
-  <script src="js/jquery-3.1.1.js"></script>
-  <script src="js/scripts.js"></script>
+
   <title>Anita's Kitchen</title>
 </head>
 
 <body>
-  <div class="navbr-top">
+  <div class="jumbotron0">
+    <div class="container">
 
-    <div class="logo">
-      <img src="img/logoBig.png" alt="logobig">
-      <p>We provide The Best Food <br>At The <strong>Right Price</strong></p>
+      <div class="header">
+        <header>
+          <button class="hamburger">&#9776;</button>
+          <button class="cross">&#735;</button>
+        </header>
+        <div class="menu">
+          <ul style="list-style-type:none">
+            <a href="#">
+              <li>Contacts</li>
+            </a>
+            <a href="#">
+              <li>Events</li>
+            </a>
+            <a href="#">
+              <li>Menu</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+      <div class="logo">
+        <img src="img/logoBig.png" alt="logobig">
+        <p>We provide The Best Food <br>At The <strong>Right Price</strong></p>
+      </div>
+      <!--end of logo-->
+
     </div>
-    <!--end of logo-->
+    <!--end of container-->
   </div>
-  <!--end of navbr-top-->
-
+  <!--end of jumbotron0-->
   <div class="col-md-3 subcont-left">
     <p>Happy Hour<br>
       <hr>Party Time</p>
@@ -174,13 +195,14 @@
   </div>
   <!--end of jumbotron2-->
   <div class="jumbotron3">
-    <div class="container">
+    <div class="container6">
       <h3 style="text-align:center"> Get our daily food items delivered into your email</h3>
       <form class="form-inline">
         <div class="form-group">
           <label for="exampleInputEmail2">Email</label>
           <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Your email">
-          <button type="submit" class="btn btn-danger">Subscribe</button>
+          <a href="https://login.mailchimp.com/?referrer=%2F&wcookie=62b136e322f0c0fa9611" button type="submit" class="btn btn-danger" alert( "You have been subscribed")>Subscribe</a>
+          </button>
         </div>
       </form>
       <!--end of form-->
@@ -191,9 +213,9 @@
   <div class="jumbotron4">
     <div class="container">
       <div class="small-logo">
-        <img src="img/logo_white.png" alt="small-logo">
+        <p><img src="img/logo_white.png" alt="small-logo">MENU</p>
       </div>
-      <div class="text" <p style="text-align:center">MENU<br>That's What We Are</p>
+      <div class="text" <p style="text-align:center"><br>That's What We Are</p>
       </div>
       <div class="social-media">
         <img src="img/facebook.png" alt="facebook">
@@ -205,7 +227,8 @@
     <!--end of jumbotron4 container-->
 
   </div>
-
+  <script src="js/jquery-3.1.1.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
