renaming images in the FastFood section

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       <div class="row1">
 
         <div class="col-md-6">
-          <img src="img/fastfood1.jpg" alt="fastfood"><br>
-          <img src="img/fastfood2.jpg" alt="fastfood2">
+          <img src="img/fastFood1.jpg" alt="fastfood"><br>
+          <img src="img/fastFood2.jpg" alt="fastfood2">
         </div>
 
 
